# digitaldash-webapp-gen2

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  KE_DigitalDash_Webapp.code-workspace  README.md  partitions.csv  pytest_KE_DigitalDash_Webapp.py  sdkconfig
.github/workflows/: build-and-release.yml  playwright.yml  release.yml  test.yml
components/stm_flash/: stm_flash.c
components/stm_flash/include/: stm_flash.h
components/stm_gpio/: CMakeLists.txt  stm_gpio.c
components/stm_gpio/include/: stm_gpio.h
components/stm_pro_mode/: CMakeLists.txt  stm_pro_mode.c
components/stm_pro_mode/include/: stm_pro_mode.h
components/web_server/: CMakeLists.txt  index.html
components/web_server/include/: backgrounds.h  config_handler.h  file_handler.h  images_handler.h  ota_handler.h  pids_handler.h  user_images.h  version.h  version.h.in  web_server.h  web_settings.h
components/web_server/src/: backgrounds.c  config_handler.c  file_handler.c  images_handler.c  ota_handler.c  pids_handler.c  themes.c  themes.h  user_images.c  web_server.c  web_settings.c  wifi_ap.c
components/web_server/static/: index.html  manifest.json
front/: .env.example  .gitignore  LICENSE  README.md  TESTING.md  TEST_SUMMARY.md  jsrepo.json  package.json  playwright.config.ts  postcss.config.js  svelte.config.js  tailwind.config.ts  vercel.json  vite.config.ts
front/.github/workflows/: playwright.yml
front/src/: app.css  app.html  hooks.client.ts
front/src/lib/: config.svelte.ts  config.ts  imageHandler.svelte.ts  settings.json  version.ts
front/src/lib/components/: BackgroundSelect.svelte  DashboardCard.svelte  ErrorBoundary.svelte  FileUploaderExplorer.svelte  Footer.svelte  GaugeComponent.svelte  Header.svelte  ImageSelect.svelte  ImagesTable.svelte  LoadingState.svelte  OfflineBanner.svelte  PIDSelect.svelte  PageCard.svelte  RecoveryBanner.svelte  SpiffsUsage.svelte  Spinner.svelte  ThemeSelect.svelte  VersionInfo.svelte  ViewCard.svelte
front/src/lib/components/themes/: Themes.svelte
front/src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte
front/src/lib/components/ui/button/: button.svelte
front/src/lib/components/ui/button copy/: button.svelte
front/src/lib/components/ui/card/: card-content.svelte
front/src/lib/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-title.svelte
front/src/lib/components/ui/file-drop-zone/: file-drop-zone.svelte
front/src/lib/components/ui/image-cropper/: image-cropper-cancel.svelte  image-cropper-controls.svelte  image-cropper-crop.svelte  image-cropper-cropper.svelte  image-cropper-dialog.svelte  image-cropper-preview.svelte  image-cropper.svelte  image-cropper.svelte.ts  types.ts
front/src/lib/components/ui/tabs/: tabs-trigger.svelte
front/src/lib/config/: PIDsStore.ts  configStore.ts  optionsCache.ts  updateConfig.ts
front/src/lib/image/: constants.ts  handler.ts  localHandler.ts
front/src/lib/mock/: devDefaults.ts
front/src/lib/server/: configStore.ts  deviceClient.ts
front/src/lib/stores/: PIDsStore.ts  configStore.ts  offlineStore.ts  optionsCache.ts  recoveryMode.ts  theme.ts
front/src/lib/types/: errors.ts
front/src/lib/utils/: configBackup.ts  errorHandling.ts  imageProcessor.ts  updateConfig.ts
front/src/lib/workers/: imageProcessor.ts
front/src/local/data/: pids.ts
front/src/local/mock/: devDefaults.ts
front/src/local/server/: configStore.ts  db.ts  deviceClient.ts
front/src/routes/: +layout.svelte  +layout.ts  +page.svelte
front/src/routes/advanced/: +page.svelte  +page.ts
front/src/routes/alerts/: +page.svelte  +page.ts  alerts.svelte.ts  alertsFormSchema.ts
front/src/routes/api/background/[name]/: +server.ts
front/src/routes/api/backgrounds/: +server.ts
front/src/routes/api/backgrounds/[name]/: +server.ts
front/src/routes/api/config/: +server.ts
front/src/routes/api/embedded/[...name]/: +server.ts
front/src/routes/api/firmware-version/: +server.ts
front/src/routes/api/firmware/bootloader/: +server.ts
front/src/routes/api/firmware/stm/: +server.ts
front/src/routes/api/firmware/web/: +server.ts
front/src/routes/api/flash/progress/: +server.ts
front/src/routes/api/image/[...name]/: +server.ts
front/src/routes/api/images/: +server.ts
front/src/routes/api/options/: +server.ts
front/src/routes/api/pids/: +server.ts
front/src/routes/api/reset/: +server.ts
front/src/routes/api/rest/: +server.ts
front/src/routes/api/spiffs/: +server.ts
front/src/routes/api/sync/: +server.ts
front/src/routes/api/theme/: +server.ts
front/src/routes/api/user_images/: +server.ts
front/src/routes/backgrounds/: +page.svelte  +page.ts  backgrounds.svelte.ts  backgrounds.ts
front/src/routes/device/info/: +page.svelte
front/src/routes/dynamic/: +page.svelte  +page.ts  dynamic.svelte.ts  dynamicFormSchema.ts
front/src/routes/firmware/: +page.svelte  +page.ts
front/src/routes/firmware/bootloader/: +page.svelte
front/src/routes/firmware/stm/: +page.svelte
front/src/routes/firmware/web/: +page.svelte
front/src/routes/settings/: +page.svelte  +page.ts
front/src/routes/themes/: +page.svelte  +page.ts
front/src/routes/view/[...id]/: +page.svelte  +page.ts  utils.ts  view.svelte.ts
front/src/schemas/: Digitaldash.ts  digitaldash.ts  schemasFactory.ts
front/static/: factory-backgrounds.json  factory-themes.json  manifest.json  sw.js
front/svelte-kit/: exclude.json
front/tests/: README.md  example.spec.ts
front/tests/e2e/: accessibility.spec.ts  alerts.spec.ts  home.spec.ts  navigation.spec.ts  settings.spec.ts
front/tests/fixtures/: test-fixtures.ts
front/tests/utils/: mock-api.ts  test-helpers.ts
instructions/: Readme.md
main/: CMakeLists.txt  KE_DigitalDash_Webapp.code-workspace  KE_DigitalDash_Webapp_main.c  Kconfig.projbuild  crc8.c  crc8.h  idf_component.yml  ke_digitaldash.h  png_transfer.c  png_transfer.h  spiffs_init.c  spiffs_init.h  stm32_uart.c  stm32_uart.h
scripts/: config.json
(+5 files in other folders)
